Opened 6 years ago

Closed 6 years ago

Last modified 5 years ago

#14792 closed bug (fixed)

XHCI: "found device with invalid IRQ - check IRQ assignment"

Reported by: Jose64141 Owned by: nobody
Priority: normal Milestone: R1/beta2
Component: Drivers/USB/XHCI Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #13188
Platform: All

Description

I tried to install Haiku from an USB, but I always got the Unable to find boot partition error. So, I tried to run the Installer from the HDD, and it worked, but not the USB mouse. PS: I have a TUF H370 PRO mobo

Attachments (4)

syslog (432.0 KB ) - added by Jose64141 6 years ago.
syslog.2 (106.1 KB ) - added by Jose64141 6 years ago.
I think it is the same :p
syslog.3 (219.5 KB ) - added by Jose64141 6 years ago.
After HDD and restart.
syslog.3.old (109.2 KB ) - added by Jose64141 6 years ago.
Before HDD

Download all attachments as: .zip

Change History (12)

comment:1 by waddlesplash, 6 years ago

Please post a syslog; one from your working install is fine.

by Jose64141, 6 years ago

Attachment: syslog added

comment:2 by waddlesplash, 6 years ago

Component: - GeneralDrivers/USB/XHCI
Keywords: USB removed
Summary: USB not workingXHCI: "found device with invalid IRQ - check IRQ assignment"
KERN: usb xhci: found device with invalid IRQ - check IRQ assignment

Well, that's a new one; I've never seen that message before!

comment:3 by mmlr, 6 years ago

The system seems to support MSIs (as the HDA driver uses one) so it is a bit surprising XHCI wouldn't be using those. The early part of the boot seems to be missing from the syslog, which holds the PCI dump and interrupt setup, so it's hard to say what's going on. Can you try removing the syslogs and booting fresh and attach a new syslog and possibly syslog.old if it exists?

by Jose64141, 6 years ago

Attachment: syslog.2 added

I think it is the same :p

comment:4 by waddlesplash, 6 years ago

This should be fixed in hrev52742; please test.

in reply to:  4 comment:5 by Jose64141, 6 years ago

Replying to waddlesplash:

This should be fixed in hrev52742; please test.

I tested hrev52749, and it booted :D, and I have Ethernet. c: But, when I try yo mount an external HDD, the USB devices stop working. :c I remember when I had my old PC, sometimes I got the same error. So i have to restart the computer and bla bla, but at least I can use the mouse, and can see the HDD files. :) I will attach the syslog after and before I mounted the HDD.

Last edited 6 years ago by Jose64141 (previous) (diff)

by Jose64141, 6 years ago

Attachment: syslog.3 added

After HDD and restart.

by Jose64141, 6 years ago

Attachment: syslog.3.old added

Before HDD

comment:6 by waddlesplash, 6 years ago

Resolution: fixed
Status: newclosed

That's already tracked as #13772. So this issue is fixed. :)

comment:7 by waddlesplash, 6 years ago

Blocking: 13188 added

comment:8 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.